# Inferno

./: .bandit  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: test.yml
docs/: INSTALL.md
src/inferno/: runner.py
src/inferno/agent/: __init__.py  mcp_tools.py  prompts.py  sdk_executor.py  strategic_planner.py
src/inferno/agents/: reasoner.py
src/inferno/algorithms/: __init__.py  bandits.py  base.py  budget.py  integration.py  manager.py  metrics.py  qlearning.py  state.py
src/inferno/auth/: client.py  credentials.py
src/inferno/benchmarks/: __init__.py  metrics.py  runner.py  tasks.py
src/inferno/cli/: __init__.py  display.py  logging_config.py  main.py  shell.py
src/inferno/config/: environment.py  profiles.py  settings.py
src/inferno/core/: __init__.py  attack_selector.py  branch_tracker.py  checkpoint.py  constants.py  guardrails.py  knowledge.py  network.py  payload_mutator.py  preflight.py  scope.py  unicode_security.py
src/inferno/handlers/: __init__.py  base.py  checkpoint_handler.py  error_handler.py  tool_handler.py
src/inferno/observability/: __init__.py  cost_tracker.py  metrics.py  session_trace.py
src/inferno/patterns/: __init__.py  conditional.py  hierarchical.py  parallel.py  pattern.py  sequential.py  swarm.py  utils.py
src/inferno/prompts/: __init__.py  engine.py  mako_engine.py
src/inferno/prompts/contexts/: ctf.md
src/inferno/prompts/techniques/: exploitation.md  methodology.md
src/inferno/prompts/templates/: system.md
src/inferno/prompts/tools/: tool_guide.md
src/inferno/quality/: candidate.py  pipeline.py
src/inferno/quality/escalation/: __init__.py  horizontal.py  vertical.py
src/inferno/quality/gates/: __init__.py
src/inferno/reporting/: __init__.py  bug_bounty_export.py  generator.py  models.py
src/inferno/reporting/templates/: __init__.py
src/inferno/setup/: __init__.py  docker_manager.py  installer.py
src/inferno/swarm/: __init__.py  agents.py  message_bus.py  meta_coordinator.py  parallel_orchestrator.py  tool.py
src/inferno/tools/: __init__.py  base.py  caido.py  decorator.py  execute_command.py  http.py  memory.py  registry.py  shell_session.py  strategy.py
src/inferno/tools/security/: nvd.py
src/inferno/utils/: __init__.py  error_handling.py  formatting.py  http_client.py  parsing.py  validation.py
tests/: conftest.py
tests/integration/: test_cli_commands.py
tests/unit/: test_scope.py
tests/unit/tools/: __init__.py  test_strategy_tools.py
