[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferno"
version = "0.1.0"
description = "Autonomous Penetration Testing Agent powered by Claude"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    { name = "Adem Kök" }
]
keywords = [
    "pentesting",
    "security",
    "autonomous",
    "agent",
    "claude",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Claude API and Agent SDK
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.16",  # Claude Agent SDK

    # Memory: Mem0 with Qdrant backend
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",

    # Embeddings (sentence-transformers is free/local, no API key needed)
    "sentence-transformers>=2.2.0",

    # HTTP & Networking
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.7.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Observability (optional but included)
    "langfuse>=2.0.0",

    # Async utilities
    "anyio>=4.2.0",
    "asyncio-throttle>=1.0.0",

    # Security tool parsing
    "defusedxml>=0.7.1",
    "python-nmap>=0.7.1",

    # Utilities
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
inferno = "inferno.cli:cli"

[project.urls]
Homepage = "https://github.com/inferno-ai/inferno"
Documentation = "https://github.com/inferno-ai/inferno#readme"
Repository = "https://github.com/inferno-ai/inferno"
Issues = "https://github.com/inferno-ai/inferno/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inferno"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument (common in base classes/interfaces)
    "ARG003", # unused class method argument
    "ARG004", # unused static method argument
    "ARG005", # unused lambda argument
    "SIM102", # nested if (sometimes clearer)
    "SIM103", # return condition directly (sometimes less clear)
    "SIM105", # contextlib.suppress (try/except/pass is clearer)
    "SIM108", # ternary operator (sometimes less readable)
    "SIM110", # any() comprehension (explicit loop clearer)
    "SIM113", # enumerate for index (stylistic)
    "SIM118", # key in dict (stylistic)
    "SIM401", # dict.get with default (stylistic)
    "RUF001", # ambiguous unicode (intentional in security code)
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment
    "RUF005", # list concatenation (stylistic)
    "RUF006", # asyncio task reference (not always needed)
    "RUF012", # mutable class attributes (dataclasses handle this)
    "RUF015", # next(iter()) (stylistic)
    "RUF022", # __all__ not sorted (order matters semantically)
    "RUF034", # useless if-else (sometimes clearer)
    "RUF059", # unused unpacked variable
    "TC001",  # type-checking imports (not critical)
    "TC002",  # third-party type-checking imports
    "TC003",  # stdlib type-checking imports (not critical)
    "PTH100", # Path.resolve() (stylistic)
    "PTH103", # Path.mkdir() (stylistic)
    "PTH107", # Path.unlink() (stylistic)
    "PTH110", # Path.exists() (stylistic)
    "PTH111", # Path.expanduser() (stylistic)
    "PTH112", # Path.is_dir() (stylistic)
    "PTH113", # Path.is_file() (stylistic)
    "PTH118", # Path / operator (stylistic)
    "PTH123", # Path.open() (stylistic)
    "PTH109", # Path.cwd() (stylistic)
    "PTH202", # Path.stat().st_size (stylistic)
    "PTH208", # Path.iterdir() (stylistic)
    "ERA001", # commented-out code (useful for documentation)
    "RUF013", # implicit Optional (legacy code)
    "B007",   # loop variable not used (sometimes intentional)
    "B904",   # raise from (not always needed)
    "C401",   # set comprehension (generator clearer sometimes)
    "E741",   # ambiguous variable name (l is clear in context)
    "UP028",  # yield from (explicit yield clearer)
    "F841",   # unused variable (sometimes intentional for readability)
]

[tool.ruff.lint.isort]
known-first-party = ["inferno"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ARG", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "qdrant_client.*",
    "langfuse.*",
    "nmap.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src/inferno"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
